--- a/estilos/style.css
+++ b/estilos/style.css
@@ -78,6 +78,7 @@ nav {
    background-color: var(--cor6);
    padding: 10px;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.295);
+   text-align: center;
 }
 
 nav a {
